# devicectrl-server

./: Cargo.toml  README.md  devicectrl-server.service  flake.nix
src/: auth.rs  config.rs  hooks.rs  main.rs  scenes.rs
src/automations/: dependencies.rs  mod.rs  sunset_light_temp.rs
src/devices/: dispatch.rs  mod.rs
src/devices/controllers/: govee.rs  krypton.rs  mod.rs  simple.rs  tplink.rs
src/server_backends/: http.rs  mod.rs  tcp.rs  udp.rs  websocket.rs
