[package]
name = "devicectrl-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
arrayvec = "0.7.6"
async-trait = "0.1.88"
chrono = "0.4.41"
futures = "0.3.31"
devicectrl-common = { git = "https://github.com/MatthewCash/devicectrl-common.git", features = [
    "alloc",
] }
log = "0.4.26"
p256 = { version = "0.13.2", features = ["serde"] }
sd-notify = "0.4.5"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
serdect = "0.3.0"
sunrise = "2.1.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-util = { version = "0.7.15", features = ["codec"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio-tungstenite = "0.27.0"
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.16", features = ["tokio"] }
http-body-util = { version = "0.1.3", features = ["full"] }
moro = "0.4.0"
